transitions fixed for safari finally - image still blurry post-keyframe

--- a/style.css
+++ b/style.css
@@ -138,19 +138,16 @@ ul.midnav li a:hover{opacity:0.5;}
 	width:48px;
 	height:auto;
 	padding: 10px 10px;
+	-o-transition: 0.3s;
+	-moz-transition:0.3s;
+	-webkit-transition: 0.3s;
 	transition: 0.3s;
 }
 
 #person img:hover{ opacity:0.5; }
 
-/*#contact:hover #profile{ opacity:0.2; }
-
-#contact, #profile img{
-	transition: 0.3s;
-}*/
-
 #profile{
-	display:flex;
+	display:block;
 	padding-top:50px;
 	width:300px;
 	height:auto;
